Fix money box growing too wide

--- a/charlie-web-demo/client/main.less
+++ b/charlie-web-demo/client/main.less
@@ -69,6 +69,7 @@ button {
 
       &.amount-col {
         min-width: 230px;
+        width: 230px;
       }
     }
 
